# CAIManager

./: .gitignore  Cargo.toml  README.MD  config.json
.github/workflows/: rust.yml
src/: instance.rs  main.rs  server.rs  sysinfo.rs
